summary stats added to CD

--- a/python_notebooks/explore_chimera.ipynb
+++ b/python_notebooks/explore_chimera.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "dec13fb7",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "600b3d19",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "925dc9d3",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "35d1d0f1",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "e6eef645",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "b0492577",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "d0b27e30",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "ee38e000",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "14566a3d",
    "metadata": {},
    "outputs": [],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "0562f676",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "b6490a2d",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
        "  'Time_to_prog_or_FUend'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "ee4dcd28",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "83666df5",
    "metadata": {},
    "outputs": [
@@ -936,7 +936,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 176/176 [00:20<00:00,  8.76it/s]\n"
+      "  0%|          | 0/176 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 176/176 [00:19<00:00,  9.10it/s]\n"
      ]
     },
     {
@@ -1141,6 +1148,214 @@
     "\n",
     "display(df_json_all.head())\n",
     "print(\"Shape:\", df_json_all.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9a0afc06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column</th>\n",
+       "      <th>n_unique</th>\n",
+       "      <th>n_missing</th>\n",
+       "      <th>top_5_values_and_counts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>age</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{65: 11, 69: 10, 70: 9, 77: 9, 73: 8}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sex</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'Male': 147, 'Female': 29}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>smoking</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'Yes': 97, 'No': 63, '-1': 16}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tumor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'Primary': 176}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>stage</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'T1HG': 164, 'TaHG': 12}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>substage</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'T1e': 124, 'T1m': 40, '-1': 12}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>grade</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'G3': 169, 'G2': 7}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>reTUR</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'Yes': 114, 'No': 62}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>LVI</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'No': 157, '-1': 12, 'Yes': 7}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>variant</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'UCC': 152, 'UCC + Variant': 24}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>EORTC</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'Highest risk': 112, 'High risk': 64}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>no_instillations</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{27.0: 34, 15.0: 25, 6.0: 20, 12.0: 15, 18.0: 12}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>BRS</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'BRS2': 69, 'BRS1': 54, 'BRS3': 53}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>progression</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{0: 112, 1: 64}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Time_to_prog_or_FUend</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{6: 6, 13: 5, 11: 4, 59: 4, 52: 4}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>chimera_id_t3</td>\n",
+       "      <td>176</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'3A_001': 1, '3A_002': 1, '3A_149': 1, '3A_15...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   column  n_unique  n_missing  \\\n",
+       "0                     age        41          0   \n",
+       "1                     sex         2          0   \n",
+       "2                 smoking         3          0   \n",
+       "3                   tumor         1          0   \n",
+       "4                   stage         2          0   \n",
+       "5                substage         3          0   \n",
+       "6                   grade         2          0   \n",
+       "7                   reTUR         2          0   \n",
+       "8                     LVI         3          0   \n",
+       "9                 variant         2          0   \n",
+       "10                  EORTC         2          0   \n",
+       "11       no_instillations        31          0   \n",
+       "12                    BRS         3          0   \n",
+       "13            progression         2          0   \n",
+       "14  Time_to_prog_or_FUend        98          0   \n",
+       "15          chimera_id_t3       176          0   \n",
+       "\n",
+       "                              top_5_values_and_counts  \n",
+       "0               {65: 11, 69: 10, 70: 9, 77: 9, 73: 8}  \n",
+       "1                         {'Male': 147, 'Female': 29}  \n",
+       "2                     {'Yes': 97, 'No': 63, '-1': 16}  \n",
+       "3                                    {'Primary': 176}  \n",
+       "4                           {'T1HG': 164, 'TaHG': 12}  \n",
+       "5                   {'T1e': 124, 'T1m': 40, '-1': 12}  \n",
+       "6                                {'G3': 169, 'G2': 7}  \n",
+       "7                              {'Yes': 114, 'No': 62}  \n",
+       "8                     {'No': 157, '-1': 12, 'Yes': 7}  \n",
+       "9                   {'UCC': 152, 'UCC + Variant': 24}  \n",
+       "10             {'Highest risk': 112, 'High risk': 64}  \n",
+       "11  {27.0: 34, 15.0: 25, 6.0: 20, 12.0: 15, 18.0: 12}  \n",
+       "12               {'BRS2': 69, 'BRS1': 54, 'BRS3': 53}  \n",
+       "13                                    {0: 112, 1: 64}  \n",
+       "14                 {6: 6, 13: 5, 11: 4, 59: 4, 52: 4}  \n",
+       "15  {'3A_001': 1, '3A_002': 1, '3A_149': 1, '3A_15...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary = []\n",
+    "\n",
+    "for col in df_json_all.columns:\n",
+    "    vc = df_json_all[col].value_counts(dropna=False)\n",
+    "    summary.append({\n",
+    "        \"column\": col,\n",
+    "        \"n_unique\": df_json_all[col].nunique(dropna=True),\n",
+    "        \"n_missing\": df_json_all[col].isna().sum(),\n",
+    "        \"top_5_values_and_counts\": vc.head(5).to_dict()\n",
+    "    })\n",
+    "\n",
+    "summary_df = pd.DataFrame(summary)\n",
+    "display(summary_df)"
    ]
   },
   {
