--- a/src/data/raw/exploration.ipynb
+++ b/src/data/raw/exploration.ipynb
@@ -361,6 +361,79 @@
    "source": [
     "split cohort A (n=126) into hospital X, cohort B (n=50) into hospital Y\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1bb5fbe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clinical_data = pd.read_csv(\"clinical_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "76908b69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column 'age' unique values: [72 59 73 63 66 64 57 69 74 77 70 53 55 65 80 83 76 79 71 86 75 67 78 68\n",
+      " 49 61 56 60 88 81 47 62 45 85 54 52 37 82 84 58 87]\n",
+      "Column 'sex' unique values: ['Male' 'Female']\n",
+      "Column 'smoking' unique values: ['No' 'Yes' '-1']\n",
+      "Column 'tumor' unique values: ['Primary']\n",
+      "Column 'stage' unique values: ['T1HG' 'TaHG']\n",
+      "Column 'substage' unique values: ['T1m' 'T1e' '-1']\n",
+      "Column 'grade' unique values: ['G3' 'G2']\n",
+      "Column 'reTUR' unique values: ['Yes' 'No']\n",
+      "Column 'LVI' unique values: ['No' 'Yes' '-1']\n",
+      "Column 'variant' unique values: ['UCC' 'UCC + Variant']\n",
+      "Column 'EORTC' unique values: ['Highest risk' 'High risk']\n",
+      "Column 'no_instillations' unique values: [24. 27. 15.  6. 23.  9. 30. 17. 32. 12. 46. 26. 41. 20. 21. 25.  8. 11.\n",
+      " 18. 14. 10. 45. 39. 36. 16. 33. 38.  5. 42. 19. -1.]\n",
+      "Column 'BRS' unique values: ['BRS2' 'BRS3' 'BRS1']\n",
+      "Column 'progression' unique values: [0 1]\n",
+      "Column 'Time_to_prog_or_FUend' unique values: [110 126  18 155  34 114 108  39  59 124   5  10  93  48  43  91  67 198\n",
+      " 143  13  62 135   7  12  41  84   6 119  83  31  99  65 121  85  11 103\n",
+      "  16  20  15  58  53   9  74  73 161  52  21  61  14  35  97 138  66 106\n",
+      "  27  40 113  30  86 117  55  89 100 134  42 149 122  81  68  28  71 109\n",
+      "  46  82 202  78  17 140 141  69 105  76 128  77  96 147  56 104  63  60\n",
+      "  49  87  88  23 101   8 153  29]\n",
+      "Column 'chimera_id_t3' unique values: ['3A_001' '3A_002' '3A_003' '3A_004' '3A_005' '3A_006' '3A_007' '3A_008'\n",
+      " '3A_009' '3A_010' '3A_011' '3A_012' '3A_013' '3A_014' '3A_015' '3A_016'\n",
+      " '3A_017' '3A_018' '3A_019' '3A_020' '3A_021' '3A_022' '3A_023' '3A_024'\n",
+      " '3A_025' '3A_026' '3A_027' '3A_028' '3A_029' '3A_030' '3A_031' '3A_033'\n",
+      " '3A_034' '3A_035' '3A_036' '3A_037' '3A_038' '3A_039' '3A_040' '3A_041'\n",
+      " '3A_042' '3A_043' '3A_044' '3A_045' '3A_046' '3A_047' '3A_049' '3A_050'\n",
+      " '3A_052' '3A_053' '3A_055' '3A_056' '3A_057' '3A_058' '3A_059' '3A_060'\n",
+      " '3A_061' '3A_062' '3A_063' '3A_064' '3A_066' '3A_067' '3A_068' '3A_070'\n",
+      " '3A_071' '3A_072' '3A_073' '3A_074' '3A_075' '3A_076' '3A_077' '3A_087'\n",
+      " '3A_088' '3A_089' '3A_091' '3A_092' '3A_093' '3A_094' '3A_095' '3A_097'\n",
+      " '3A_098' '3A_100' '3A_105' '3A_108' '3A_110' '3A_111' '3A_113' '3A_114'\n",
+      " '3A_115' '3A_116' '3A_123' '3A_124' '3A_125' '3A_126' '3A_127' '3A_129'\n",
+      " '3A_130' '3A_134' '3A_135' '3A_136' '3A_137' '3A_138' '3A_139' '3A_140'\n",
+      " '3A_141' '3A_142' '3A_143' '3A_144' '3A_145' '3A_146' '3A_147' '3A_148'\n",
+      " '3A_149' '3A_153' '3A_154' '3A_157' '3A_158' '3A_160' '3A_162' '3A_163'\n",
+      " '3A_165' '3A_168' '3A_169' '3A_186' '3A_190' '3A_191' '3B_208' '3B_217'\n",
+      " '3B_225' '3B_227' '3B_229' '3B_230' '3B_250' '3B_262' '3B_266' '3B_267'\n",
+      " '3B_277' '3B_281' '3B_288' '3B_292' '3B_302' '3B_303' '3B_304' '3B_309'\n",
+      " '3B_310' '3B_319' '3B_321' '3B_322' '3B_328' '3B_337' '3B_338' '3B_342'\n",
+      " '3B_351' '3B_354' '3B_357' '3B_361' '3B_362' '3B_365' '3B_367' '3B_370'\n",
+      " '3B_385' '3B_389' '3B_390' '3B_397' '3B_399' '3B_408' '3B_410' '3B_411'\n",
+      " '3B_413' '3B_415' '3B_417' '3B_418' '3B_426' '3B_428' '3B_429' '3B_431']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in clinical_data.columns:\n",
+    "    unique_values = clinical_data[col].unique()\n",
+    "    print(f\"Column '{col}' unique values: {unique_values}\")"
+   ]
   }
  ],
  "metadata": {
